<resources>
    <string name="app_name">Coinz</string>
    <string name="action_settings">Settings</string>
    <string name="action_reset_view">Reset View</string>
    <string name="mapbox_access_token">pk.eyJ1Ijoia2llcmFubGl0c2NoZWwiLCJhIjoiY2ptaHZpdGJ0MXA1ZjNrbzl6amVkZnNidiJ9.74MEj4wFmMf-uYn82RazpQ</string>
    <string name="logout">Logout</string>
    <string name="close_app">Close app</string>
    <string name="try_again">Try again</string>
    <string name="no_login_dialog_message">You must be logged in to the app to use it with no internet. Please connect to the internet and log in.</string>
    <string name="balance">Balance</string>
    <string name="coin_exchange">Coin Exchange</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="map">Map</string>
    <string name="value_in_gold">Offered gold for crypto:\n0.0</string>
    <string name="cryptoEditTextHint">Amount to exchange…</string>
    <string name="cancel">Cancel</string>
    <string name="accept_trade">Accept Trade</string>
    <string name="exchange_crypto_title">Exchange Gold with Bank</string>
    <string name="remaining_gold_to_trade">Remaining crypto bank will accept today:\n25.0</string>
    <string name="exhange_rate_text">Exchange rate:\n0.0</string>
    <string name="create_username">Create username</string>
    <string name="create_a_username">Create a username</string>
    <string name="new_user_username">New users must create a username in order to gift coins.</string>
    <string name="new_username">New username…</string>
    <string name="username_in_use">That username is already in use, please try another.</string>
    <string name="username_same">The new username is the same as your old one, if you\'d like to change it please enter a new one.</string>
    <string name="change_username">Change username</string>
    <string name="gift_coins">Gift coins</string>
    <string name="your_username_is">Your username is:\n</string>
    <string name="recipients_username">Recipients username…</string>
    <string name="amount_to_gift">Amount to gift…</string>
    <string name="recipent_not_found">Recipients username not found in database</string>
    <string name="send_gift">Send gift</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="your_rank">Your rank</string>
    <string name="rank">Rank</string>
    <string name="username">Username</string>
    <string name="gold">Gold</string>
    <string name="your_username">Your username</string>
    <string name="your_gold">Your gold</string>
    <string name="you">You</string>
    <string name="top_10">Top 10</string>
    <string name="new_user_username_leaderboard">New users must create a username in order to view the leaderboard.</string>
    <string name="user_location_permission_explanation">Need permission for fine location for calculating distance to coins, and displaying position on map.</string>
    <string-array name="crypto_array">
        <item>PENY</item>
        <item>DOLR</item>
        <item>SHIL</item>
        <item>QUID</item>
    </string-array>
</resources>
